# Double_machine_learning_project

./: .gitignore  README.md  main.py  model_comparison.csv  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
notebooks/: 1_explore_data_and_baseline_model.ipynb
outputs/cli_smoke/metrics/: budget_curve.csv  positive_policy_results.csv  threshold_policy_results.csv
outputs/metrics/: budget_curve.csv  fraction_policy_results.csv  model_comparison.csv  model_metrics.csv  positive_policy_results.csv  threshold_policy_results.csv
src/: baselines.py  config.py  data.py  data_validation.py  evaluation.py  experiment.py  inference.py  mlflow_tracking.py  model.py  plots.py  policy.py  preprocessing.py
tests/: test_baselines.py  test_cli.py  test_data_validation.py  test_evaluation.py  test_inference.py  test_model.py  test_plots.py  test_policy.py  test_preprocessing.py
